[project]
name = "maziar-scheduler"
version = "0.1.0"
description = ""
authors = [
    {name = "MaziarHeidari2003",email = "maziarheidari1124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis[async] (>=7.0.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
